[package]
name = "snemu"
version = "0.0.1"
edition = "2024"
publish = false

[dependencies]
# Host-side telemetry decode: the binary turns the bytes snemu pulls off the
# virtio-console back into `Frame`s. The emulator core (`lib`) stays decoupled.
protocol = { path = "../protocol", features = ["std"] }
# CLI arg parsing for the `snemu` binary (the lib is arg-free).
clap = { version = "4", features = ["derive"] }

# Backend B (native block JIT, host-only): `mmap`/`MAP_JIT` for executable memory.
# Only the JIT module uses it; the interpreter core stays dependency-free and
# `unsafe`-free. Scoped off wasm (the browser path is Backend A only).
#
# `minifb`: the `--window` CLI flag's live framebuffer display (main.rs only,
# not the lib). Windowing is meaningless in a wasm build — scoped off it too.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libc = "0.2"
minifb = "0.27"

[dev-dependencies]
# Read-only FDT parser (the same one the kernel uses) — verifies the bootargs
# our firmware-role DTB patch injects parses back correctly.
fdt = "0.1.5"

[lints]
workspace = true
