[package]
name = "stitch"
version = "0.0.1"
edition = "2024"
publish = false

[features]
# Exposes `stitch::testing` — the shared harness for running `.st` programs from
# outside the crate (integration tests, stim's FSM tests, the Stitch mutation
# tester). Off by default; the metal build never compiles it.
testing = []

[dependencies]
protocol = { path = "../protocol" }
# The kernel↔userspace ABI — for the cap object-kind discriminants the `hold`
# lift (`ObjectKind::from_abi`) maps. `no_std`, no transitive deps; host + target.
snitchos-abi = { path = "../abi" }
# The `hitch` value model. `stitch` understands `hitch`, never the reverse:
# `hitch` is a leaf, so `stitch` owns the `Value` <-> `hitch::Value` bridge.
hitch = { path = "../hitch" }
# Display-width measurement for table column alignment: emoji/CJK occupy two
# terminal cells but count as one `char` (and a VS16-selected emoji like ✏️ is
# two `char`s for one cell-pair), so char count misaligns. `no_std`, no deps;
# host + target.
unicode-width = "0.2"

# The userspace runtime — only on the SnitchOS target (riscv `target_os =
# "none"`). Backs the on-target `RuntimeTelemetry`, which routes Stitch's
# `emit`/`span` through capability-mediated syscalls. Excluded from host/test
# builds (its `ecall` asm + crt0 don't compile for the host).
[target.'cfg(target_os = "none")'.dependencies]
snitchos-user = { path = "../user/runtime" }
# The FS-over-IPC request/response protocol — for `RuntimePlatform::fs_read`'s
# lookup + read through the process's endpoint cap (backs `readFile`/`view`).
fs-proto = { path = "../fs-proto" }

[dev-dependencies]
insta = "1"
# `std` here only unions into the test build, giving tests `OwnedFrame` for
# borrow-free assertions; normal/no_std builds get plain `protocol`.
protocol = { path = "../protocol", features = ["std"] }

[lints]
workspace = true

[lib]
# No doctests in this crate; doctest=false keeps `cargo test` off the slow
# rustdoc doc-test compile. The gate runs nextest (never runs doctests) — see
# CLAUDE.md "use nextest". Add doctest=false to any new lib crate too.
doctest = false
