[package]
name = "xtask-cmds"
version = "0.0.1"
edition = "2024"
publish = false

[dependencies]
# `measure` decodes telemetry frames off the console socket.
protocol = { path = "../protocol", features = ["std"] }
# `snip` staging plan (de)serialization.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Sonnet-assisted staging: pure prompt/parse core; xtask owns the git I/O.
snip = { path = "../snip" }
# QEMU/kernel-build helpers used by `measure`.
xtask-qemu = { path = "../xtask-qemu" }

[lints]
workspace = true

[lib]
# No doctests in this crate; doctest=false keeps `cargo test` off the slow
# rustdoc doc-test compile. The gate runs nextest (never runs doctests) — see
# CLAUDE.md "use nextest". Add doctest=false to any new lib crate too.
doctest = false
