[package]
name = "xtask-qemu"
version = "0.0.1"
edition = "2024"
publish = false

[dependencies]
# `OptLevel` derives `clap::ValueEnum` so it can be a `--opt` flag value
# directly in the xtask CLI.
clap = { version = "4", features = ["derive"] }

[lints]
workspace = true

[lib]
# No doctests in this crate; doctest=false keeps `cargo test` off the slow
# rustdoc doc-test compile. The gate runs nextest (never runs doctests) — see
# CLAUDE.md "use nextest". Add doctest=false to any new lib crate too.
doctest = false
