[package]
name = "xtask"
version = "0.0.1"
edition = "2024"
publish = false

# The lean half of xtask: build/boot/test/clippy/collect/… — everything that does
# NOT link `snemu`. The snemu-linked half (itest / snemu group / diagram) lives in
# `xtask-itest` and is reached by delegation. Keeping `snemu` out of this manifest
# is the whole point: `cargo xtask test` no longer compiles the emulator into the
# tool. See plans/xtask-lean-test-binary.md.
[dependencies]
clap = { version = "4", features = ["derive"] }
# QEMU invocation + kernel-build helpers (`base_command`, `build_kernel*`,
# `OptLevel`), used by `boot`/`debug`/`measure`.
xtask-qemu = { path = "../xtask-qemu" }
# Standalone commands (audit/loc/links/measure/snip) with no itest coupling.
xtask-cmds = { path = "../xtask-cmds" }
# The workload registry, so `image --workload` validates the name against the
# same parser the kernel uses instead of keeping a second copy of the list. On
# the board an unknown name would otherwise boot the default silently, and you'd
# only find out after a TFTP + `booti` round trip.
kernel-boot = { path = "../kernel-boot" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ctrlc = "3"

[lints]
workspace = true
