[package]
name = "toy-allocator"
version = "0.1.0"
edition = "2021"

# A standalone allocator playground. `std` is fine here — this is a
# learning aid, not kernel code. The *algorithms* are identical to the
# real ones in kernel-core; only the storage is a plain Vec instead of
# a static byte region.

[dependencies]
