[package]
name = "toy-allocator"
version = "0.1.0"
edition = "2021"

# A standalone allocator playground. `std` is fine here — this is a
# learning aid, not kernel code. The *algorithms* are identical to the
# real ones in kernel-mem; only the storage is a plain Vec instead of
# a static byte region.

[dependencies]

[dev-dependencies]
# Property-based testing with automatic shrinking: when a generated
# alloc/free sequence breaks an invariant, proptest minimises it to the
# smallest reproducer instead of just printing a seed.
proptest = "1"
